--- a/portfolios/new-work/reflections.html
+++ b/portfolios/new-work/reflections.html
@@ -131,7 +131,7 @@
 			<div class="photoNav">
 				<p id="photoNavM" class="nav">
 					 
-					<a class="button gallery next" href="the-cosmic-wall">❯❯</a>				</p>
+					<a class="button gallery next" href="the-cosmic-wall.html">❯❯</a>				</p>
 				<div class="image-nav">
 																		<ul>
 															<li><a class="button gallery trigger selected" id="photo1" href="#1">1</a></li>
@@ -153,9 +153,9 @@
 
 				<p id="photoNavD" class="nav">
 				 
-				<a class="button gallery next" href="the-cosmic-wall">❯❯</a>				</p>
+				<a class="button gallery next" href="the-cosmic-wall.html">❯❯</a>				</p>
 			
-				<p>Read the <a href="/writings/field-notes/reflections">field notes</a> for this image.</p>				
+				<p>Read the <a href="/writings/field-notes/reflections.html">field notes</a> for this image.</p>				
 			</div>
 		</div>
 	</div>
