--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Douglas Vincent | Photographic Arts">
 	<meta http-equiv="Expires" content="30">
 	<link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
-	<link href="/global/styles/base.css" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/base.css" rel="stylesheet" type="text/css" media="screen">
 	</head>
 <body id="">
  
