--- a/public/portfolios/zion-national-park/the-cosmic-wall.html
+++ b/public/portfolios/zion-national-park/the-cosmic-wall.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Douglas Vincent | Photographic Arts">
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
-    <link href="/global/styles/base.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
   </head>
   <body id="The Cosmic Wall">
     <div id="top">
