--- a/public/portfolios/zion-national-park/the-cosmic-wall.html
+++ b/public/portfolios/zion-national-park/the-cosmic-wall.html
@@ -116,9 +116,9 @@
       <div class="row">
         <div class="p-main" id="resize">
           <div class="sizing">
-            <img src="/assets/photographs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall" class="photograph photo1 current" data-width="{{image-width}}" data-height="{{image-height}}"/>
-            <img src="/assets/photographs/the-cosmic-wall-zion-national-park-home.jpg" alt="The Cosmic Wall" class="photograph photo2" data-width="{{image-width}}" data-height="{{image-height}}"/>
-            <img src="/assets/photographs/the-cosmic-wall-zion-national-park-biz.jpg" alt="The Cosmic Wall" class="photograph photo3" data-width="{{image-width}}" data-height="{{image-height}}"/>
+            <img src="/assets/photographs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall" class="photograph photo1 current" data-width="1920" data-height="2400"/>
+            <img src="{{image-home}}" alt="The Cosmic Wall" class="photograph photo2" data-width="1920" data-height="2400"/>
+            <img src="{{image-biz}}" alt="The Cosmic Wall" class="photograph photo3" data-width="1920" data-height="2400"/>
           </div>
 
           <div class="photoNav">
