--- a/public/portfolios/zion-national-park/the-cosmic-wall.html
+++ b/public/portfolios/zion-national-park/the-cosmic-wall.html
@@ -123,7 +123,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-              <a class="button gallery next" href="#">❯❯</a>
+					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
+					    <a class="button gallery next" href="solemnity.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,9 +148,11 @@
               <a class="button gallery inquire" href="/inquiries/print/">INQUIRIES ❯❯</a>
             </p>
 
-            <p id="photoNavD" class="nav">
-              <a class="button gallery next" href="#">❯❯</a>
+           <p id="photoNavD" class="nav">
+					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
+					    <a class="button gallery next" href="solemnity.html">❯❯</a>
             </p>
+ 
 
             <p>Read the <a href="/writings/field-notes/">field notes</a> for this image.</p>
           </div>
