--- a/public/portfolios/zion-national-park/the-cosmic-wall.html
+++ b/public/portfolios/zion-national-park/the-cosmic-wall.html
@@ -117,8 +117,8 @@
         <div class="p-main" id="resize">
           <div class="sizing">
             <img src="/assets/photographs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall" class="photograph photo1 current" data-width="2400" data-height="1920"/>
-            <img src="{{image-home}}" alt="The Cosmic Wall" class="photograph photo2" data-width="2400" data-height="1920"/>
-            <img src="{{image-biz}}" alt="The Cosmic Wall" class="photograph photo3" data-width="2400" data-height="1920"/>
+            <img src="/assets/photographs/the-cosmic-wall-zion-national-park-home.jpg" alt="The Cosmic Wall" class="photograph photo2" data-width="2400" data-height="1920"/>
+            <img src="/assets/photographs/the-cosmic-wall-zion-national-park-biz.jpg" alt="The Cosmic Wall" class="photograph photo3" data-width="2400" data-height="1920"/>
           </div>
 
           <div class="photoNav">
