--- a/public/portfolios/zion-national-park/reflections.html
+++ b/public/portfolios/zion-national-park/reflections.html
@@ -117,8 +117,8 @@
         <div class="p-main" id="resize">
           <div class="sizing">
             <img src="/assets/photographs/reflections-subway-zion-national-park.jpg" alt="Reflections" class="photograph photo1 current" data-width="2400" data-height="1800"/>
-            <img src="{{image-home}}" alt="Reflections" class="photograph photo2" data-width="2400" data-height="1800"/>
-            <img src="{{image-biz}}" alt="Reflections" class="photograph photo3" data-width="2400" data-height="1800"/>
+            <img src="/assets/photographs/reflections-subway-zion-national-park-home.jpg" alt="Reflections" class="photograph photo2" data-width="2400" data-height="1800"/>
+            <img src="/assets/photographs/reflections-subway-zion-national-park-biz.jpg" alt="Reflections" class="photograph photo3" data-width="2400" data-height="1800"/>
           </div>
 
           <div class="photoNav">
