--- a/public/portfolios/zion-national-park/solemnity.html
+++ b/public/portfolios/zion-national-park/solemnity.html
@@ -117,8 +117,8 @@
         <div class="p-main" id="resize">
           <div class="sizing">
             <img src="/assets/photographs/solemnity-zion-national-park.jpg" alt="Solemnity" class="photograph photo1 current" data-width="2400" data-height="1940"/>
-            <img src="{{image-home}}" alt="Solemnity" class="photograph photo2" data-width="2400" data-height="1940"/>
-            <img src="{{image-biz}}" alt="Solemnity" class="photograph photo3" data-width="2400" data-height="1940"/>
+            <img src="/assets/photographs/solemnity-zion-national-park-home.jpg" alt="Solemnity" class="photograph photo2" data-width="2400" data-height="1940"/>
+            <img src="/assets/photographs/solemnity-zion-national-park-biz.jpg" alt="Solemnity" class="photograph photo3" data-width="2400" data-height="1940"/>
           </div>
 
           <div class="photoNav">
