--- a/public/portfolios/zion-national-park/solemnity.html
+++ b/public/portfolios/zion-national-park/solemnity.html
@@ -123,8 +123,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
-					    <a class="button gallery next" href="solemnity.html">❯❯</a>
+					    
+              <a class="button gallery next" href="the-cosmic-wall.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -149,8 +149,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
-					    <a class="button gallery next" href="solemnity.html">❯❯</a>
+					    
+              <a class="button gallery next" href="the-cosmic-wall.html">❯❯</a>
             </p>
  
 
