--- a/public/portfolios/zion-national-park/index.html
+++ b/public/portfolios/zion-national-park/index.html
@@ -112,11 +112,13 @@
 </div>
 
   <main id="main" class="section">
-    <div class="intro">
+    <h1>Zion National Park</h1>
+    <div class="port-intro">
       Over the course of my photographic life, no place has had greater influence or offered essential sanctuary than Zion National Park. The love I have for this extraordinary place is akin to the love of a child or partner. Early images of “grand landscape” evolved into more subtle and intimate subject matter. I came to comprehend, appreciate, and celebrate the essential details that comprised the whole. Those details, whether water, tree, or stone are so varied and provide me with such joy, I know I could spend a lifetime exploring Zion and not exhaust their power.
     </div>
-    <div id="thumbs">
-      <div class="thumb">
+    <div class="row">
+      <div id="thumbs">
+        <div class="thumb">
         <a href="solemnity.html">
           <img src="/assets/photographs/_thumbs/solemnity-zion-national-park.jpg" alt="Solemnity">
           <h4>Solemnity</h4>
@@ -133,6 +135,7 @@
           <img src="/assets/photographs/_thumbs/reflections-subway-zion-national-park.jpg" alt="Reflections">
           <h4>Reflections</h4>
         </a>
+      </div>
       </div>
     </div>
   </main>
