--- a/public/portfolios/zion-national-park/index.html
+++ b/public/portfolios/zion-national-park/index.html
@@ -114,7 +114,7 @@
   <main id="main" class="section">
     <h1>Zion National Park</h1>
     <div class="port-intro">
-      Over the course of my photographic life, no place has had greater influence or offered essential sanctuary than Zion National Park. The love I have for this extraordinary place is akin to the love of a child or partner. Early images of “grand landscape” evolved into more subtle and intimate subject matter. I came to comprehend, appreciate, and celebrate the essential details that comprised the whole. Those details, whether water, tree, or stone are so varied and provide me with such joy, I know I could spend a lifetime exploring Zion and not exhaust their power.
+      <p>Over the course of my photographic life, no place has had greater influence or offered essential sanctuary than Zion National Park. The love I have for this extraordinary place is akin to the love of a child or partner. Early images of “grand landscape” evolved into more subtle and intimate subject matter. I came to comprehend, appreciate, and celebrate the essential details that comprised the whole. Those details, whether water, tree, or stone are so varied and provide me with such joy, I know I could spend a lifetime exploring Zion and not exhaust their power.</p>
     </div>
     <div class="row">
       <div id="thumbs">
