--- a/public/portfolios/icons-of-agriculture/index.html
+++ b/public/portfolios/icons-of-agriculture/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Zion National Park - Douglas Vincent Photographic Arts</title>
+  <title>Icons of Agriculture - Douglas Vincent Photographic Arts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="referrer" content="origin-when-cross-origin">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
   <link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
-<body id="Zion National Park">
+<body id="Icons of Agriculture">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -109,30 +109,13 @@
 </div>
 
   <main id="main" class="section">
-    <h1>Zion National Park</h1>
+    <h1>Icons of Agriculture</h1>
     <div class="port-intro">
-      <p>Over the course of my photographic life, no place has had greater influence or offered essential sanctuary than Zion National Park. The love I have for this extraordinary place is akin to the love of a child or partner. Early images of “grand landscape” evolved into more subtle and intimate subject matter. I came to comprehend, appreciate, and celebrate the essential details that comprised the whole. Those details, whether water, tree, or stone are so varied and provide me with such joy, I know I could spend a lifetime exploring Zion and not exhaust their power.</p>
+      <p>I can trace the seeds of interest in agricultural structures back to 2009 when, living in Northern California, I made many road trips down Hwy 101 to visit my mother living in Santa Barbara. Between the towns of Salinas and Paso Robles lies an agricultural belt known as the Salinas Valley. The valley specializes in produce agriculture and the western slopes are home to the Santa Lucia Highlands wine appellation, an excellent producer of Pinot Noir. My excursions inevitably veered onto side roads where my eye was quickly drawn to a kaleidoscope of geometric shapes and intersections carved into the fertile land. My camera soon accompanied me on those trips.</p>
     </div>
     <div class="row">
       <div id="thumbs">
-        <div class="thumb">
-        <a href="solemnity.html">
-          <img src="/assets/photographs/_thumbs/solemnity-zion-national-park.jpg" alt="Solemnity">
-          <h4>Solemnity</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="the-cosmic-wall.html">
-          <img src="/assets/photographs/_thumbs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
-          <h4>The Cosmic Wall</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="reflections.html">
-          <img src="/assets/photographs/_thumbs/reflections-subway-zion-national-park.jpg" alt="Reflections">
-          <h4>Reflections</h4>
-        </a>
-      </div>
+        
       </div>
     </div>
   </main>
