--- a/public/portfolios/zion-national-park/the-cosmic-wall.html
+++ b/public/portfolios/zion-national-park/the-cosmic-wall.html
@@ -39,18 +39,15 @@
           <h3><a href="/portfolios/">Portfolios</a></h3>
         </div>
         <ul class="navSection" id="navPortfolios">
-          <li><a href="/portfolios/new-work">New Work - Cibachrome</a></li>
-          <li><a href="/portfolios/new-work-icons-of-agriculture">New Work - Agriculture</a></li>
-          <li><a href="/portfolios/new-work-in-nature">New Work - In Nature</a></li>
-          <li><a href="/portfolios/zion-national-park">Zion National Park (I)</a></li>
-          <li><a href="/portfolios/autumn-01">Zion: Autumn (I)</a></li>
-          <li><a href="/portfolios/ancient-sands">Zion: Ancient Sands</a></li>
-          <li><a href="/portfolios/watercourse-way">Zion: Watercourse Way</a></li>
+         <li><a href="/portfolios/zion-national-park">Zion National Park</a></li>
+          <li><a href="/portfolios/zion-national-park-autumn">Zion: Autumn</a></li>
+          <li><a href="/portfolios/zion-national-park-ancient-sands">Zion: Ancient Sands</a></li>
+          <li><a href="/portfolios/zion-national-park-watercourse-way">Zion: Watercourse Way</a></li>
           <li><a href="/portfolios/icons-of-agriculture">Icons of Agriculture (I)</a></li>
           <li><a href="/portfolios/icons-of-agriculture-ii">Icons of Agriculture (II)</a></li>
           <li><a href="/portfolios/icons-of-agriculture-iii">Icons of Agriculture (III)</a></li>
+          <li><a href="/portfolios/icons-of-agriculture-iiv">Icons of Agriculture (IV)</a></li>
           <li><a href="/portfolios/cloud-light">Cloud Light</a></li>
-          <li><a href="/portfolios/aspens">Aspens</a></li>
           <li><a href="/portfolios/the-american-west">The American West (I)</a></li>
           <li><a href="/portfolios/the-american-west-ii">The American West (II)</a></li>
           <li><a href="/portfolios/polaroid-type-52">Polaroid Type 52</a></li>
