--- a/public/index.html
+++ b/public/index.html
@@ -121,12 +121,10 @@
 	<main id="main">
 
 		
-	<div class="homecontent">
-		<a href="/portfolios"><img src="/assets/photographs/_home1440/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy - Kebler Pass - Master"></a>
-		<h3>Aspen Canopy at Dusk</h3>
-		<h4>Kebler Pass, Colorado, 2020</h4>
-		<p><a href="/portfolios" class="more">View All Photographs »</a></p>
+	<div class="homecontent" id="featured-hero">
+		<!-- Content will be injected here -->
 	</div>
+
 </main>
 
 
@@ -189,6 +187,24 @@
 			});
 		});
 	</script>
+
+	<script>
+		fetch("/global/data/home-featured.json")
+			.then(response => response.json())
+			.then(items => {
+			const f = items[Math.floor(Math.random() * items.length)];
+
+			document.getElementById("featured-hero").innerHTML = `
+				<a href="${f.link}"><img src="${f.image}" alt="${f.alt}"></a>
+				<h3>${f.title}</h3>
+				<h4>${f.location}</h4>
+				<p><a href="${f.link}" class="more">View All Photographs »</a></p>
+			`;
+			})
+			.catch(err => console.error("Error loading featured image:", err));
+</script>
+
+
 
 	<script src="/global/scripts/general.js"></script>
 	<script src="/global/scripts/sizing.js"></script>
