--- a/public/portfolios/zion-national-park/index.html
+++ b/public/portfolios/zion-national-park/index.html
@@ -116,19 +116,19 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="solemnity.html">
+        <a href="/portfolios/zion-national-park/solemnity.html">
           <img src="/assets/photographs/thumbs/solemnity-zion-national-park.jpg" alt="Solemnity">
           <h4>Solemnity</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="the-cosmic-wall.html">
+        <a href="/portfolios/zion-national-park/the-cosmic-wall.html">
           <img src="/assets/photographs/_thumbs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
           <h4>The Cosmic Wall</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="reflections.html">
+        <a href="/portfolios/zion-national-park/reflections.html">
           <img src="/assets/photographs/thumbs/reflections-subway-zion-national-park.jpg" alt="Reflections">
           <h4>Reflections</h4>
         </a>
