--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Large Format Photography, Analog Photography, Film Photography, Film, Cibachrome, Ilfochrome">
 	<meta name="author" content="Douglas Vincent | Photographic Arts">
 	<meta http-equiv="Expires" content="30">
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
 	<link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
 	<link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
 	</head>
