--- a/public/index.html
+++ b/public/index.html
@@ -81,12 +81,12 @@
 				<div class="dropdown">
 					<div class="dropclick">
 						<div class="more">
-							<input type="checkbox" class="navPrints &amp; Books" id="navTogglePrints &amp; Books">
-							<label for="navTogglePrints &amp; Books" class="navSectionToggle navPrints &amp; Books"><h3></h3></label>
+							<input type="checkbox" class="navPrintsBooks" id="navTogglePrintsBooks">
+							<label for="navTogglePrintsBooks" class="navSectionToggle navPrintsBooks"><h3></h3></label>
 						</div>
 						<h3><a href="/prints-books">Prints &amp; Books</a></h3>
 					</div>
-					<ul class="navSection" id="navPrints &amp; Books">
+					<ul class="navSection" id="navPrintsBooks">
 						<li><a href="/prints-books">Overview</a></li>
 						<li><a href="/prints-books/print-types">Print Types</a></li>
 						<li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
