--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
 	<meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Large Format Photography, Analog Photography, Film Photography, Film, Cibachrome, Ilfochrome">
 	<meta name="author" content="Douglas Vincent | Photographic Arts">
 	<meta http-equiv="Expires" content="30">
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
 	<link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
-	<link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen">
 	</head>
 <body id="">
  
@@ -133,7 +131,9 @@
 </footer>
 	
 
-<script type="text/javascript">
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
+	<script type="text/javascript">
 		$(document).ready(function() {
 			noBurger = 1024;
 			$('#navToggleMain').change(function() {
@@ -186,24 +186,6 @@
 			});
 		});
 	</script>
-
-	<script>
-		fetch("/global/data/home-featured.json")
-			.then(response => response.json())
-			.then(items => {
-			const f = items[Math.floor(Math.random() * items.length)];
-
-			document.getElementById("featured-hero").innerHTML = `
-				<a href="${f.link}"><img src="${f.image}" alt="${f.alt}"></a>
-				<h3>${f.title}</h3>
-				<h4>${f.location}</h4>
-				<p><a href="/portfolios" class="more">View All Photographs »</a></p>
-			`;
-			})
-			.catch(err => console.error("Error loading featured image:", err));
-</script>
-
-
 
 	<script src="/global/scripts/general.js"></script>
 	<script src="/global/scripts/sizing.js"></script>
