--- a/public/portfolios/zion-national-park/sunset-kinesava-zion-national-park.html
+++ b/public/portfolios/zion-national-park/sunset-kinesava-zion-national-park.html
@@ -121,7 +121,7 @@
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
 					    <a class="button gallery prev" href="cosmic-lichen-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="sunset-kinesava-zion.html">❯❯</a>
+              <a class="button gallery next" href="a-good-resting-place-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,7 +147,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="cosmic-lichen-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="sunset-kinesava-zion.html">❯❯</a>
+              <a class="button gallery next" href="a-good-resting-place-zion-national-park.html">❯❯</a>
             </p>
  
 
