--- a/public/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html
+++ b/public/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html
@@ -121,8 +121,8 @@
 
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    
-              <a class="button gallery next" href="along-the-river-zion-national-park.html">❯❯</a>
+					    <a class="button gallery prev" href="zion-national-park-watercourse-way.html">❮❮</a>
+              <a class="button gallery next" href="velvet-reflections-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    
-              <a class="button gallery next" href="along-the-river-zion-national-park.html">❯❯</a>
+					    <a class="button gallery prev" href="zion-national-park-watercourse-way.html">❮❮</a>
+              <a class="button gallery next" href="velvet-reflections-zion-national-park.html">❯❯</a>
             </p>
  
 
