--- a/public/portfolios/icons-of-agriculture-iii/grain-loader-willows.html
+++ b/public/portfolios/icons-of-agriculture-iii/grain-loader-willows.html
@@ -122,7 +122,7 @@
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
 					    <a class="button gallery prev" href="glowing-silos-and-moon-willows.html">❮❮</a>
-              
+              <a class="button gallery next" href="icons-of-agriculture-iii.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="glowing-silos-and-moon-willows.html">❮❮</a>
-              
+              <a class="button gallery next" href="icons-of-agriculture-iii.html">❯❯</a>
             </p>
  
 
