--- a/public/portfolios/icons-of-agriculture-iv/glowing-silos-willows.html
+++ b/public/portfolios/icons-of-agriculture-iv/glowing-silos-willows.html
@@ -122,7 +122,7 @@
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
 					    <a class="button gallery prev" href="silos-reflected-willows.html">❮❮</a>
-              
+              <a class="button gallery next" href="icons-of-agriculture-iv.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="silos-reflected-willows.html">❮❮</a>
-              
+              <a class="button gallery next" href="icons-of-agriculture-iv.html">❯❯</a>
             </p>
  
 
