--- a/public/portfolios/icons-of-agriculture/red-off-white-and-blue-palouse.html
+++ b/public/portfolios/icons-of-agriculture/red-off-white-and-blue-palouse.html
@@ -121,7 +121,7 @@
 
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    <a class="button gallery prev" href="stacks-and-stairs-delevan.html">❮❮</a>
+					    <a class="button gallery prev" href="icons-of-agriculture.html">❮❮</a>
               <a class="button gallery next" href="silver-silos-pomeroy.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="stacks-and-stairs-delevan.html">❮❮</a>
+					    <a class="button gallery prev" href="icons-of-agriculture.html">❮❮</a>
               <a class="button gallery next" href="silver-silos-pomeroy.html">❯❯</a>
             </p>
  
