--- a/public/portfolios/the-american-west-ii/evening-light-bryce-canyon.html
+++ b/public/portfolios/the-american-west-ii/evening-light-bryce-canyon.html
@@ -122,7 +122,7 @@
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
 					    <a class="button gallery prev" href="twilight-cascade-sierra-nevada.html">❮❮</a>
-              <a class="button gallery next" href="sea-slot-pacific-coast.html">❯❯</a>
+              <a class="button gallery next" href="the-american-west-ii.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="twilight-cascade-sierra-nevada.html">❮❮</a>
-              <a class="button gallery next" href="sea-slot-pacific-coast.html">❯❯</a>
+              <a class="button gallery next" href="the-american-west-ii.html">❯❯</a>
             </p>
  
 
