--- a/public/portfolios/the-american-west-ii/lightning-white-mountains.html
+++ b/public/portfolios/the-american-west-ii/lightning-white-mountains.html
@@ -121,8 +121,8 @@
 
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    <a class="button gallery prev" href="hillside-oak-and-flowers-monterey.html">❮❮</a>
-              <a class="button gallery next" href="luminous-grasses-oregon.html">❯❯</a>
+					    <a class="button gallery prev" href="the-american-west-ii.html">❮❮</a>
+              <a class="button gallery next" href="river-dance-arizona.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="hillside-oak-and-flowers-monterey.html">❮❮</a>
-              <a class="button gallery next" href="luminous-grasses-oregon.html">❯❯</a>
+					    <a class="button gallery prev" href="the-american-west-ii.html">❮❮</a>
+              <a class="button gallery next" href="river-dance-arizona.html">❯❯</a>
             </p>
  
 
