--- a/public/portfolios/the-american-west/sahalie-falls-mckenzie-river.html
+++ b/public/portfolios/the-american-west/sahalie-falls-mckenzie-river.html
@@ -121,7 +121,7 @@
 
  <!--          <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    <a class="button gallery prev" href="cottonwood-creek-aspens-white-mountains.html">❮❮</a>
+					    <a class="button gallery prev" href="the-american-west.html">❮❮</a>
               <a class="button gallery next" href="sahalie-falls-oregon.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="cottonwood-creek-aspens-white-mountains.html">❮❮</a>
+					    <a class="button gallery prev" href="the-american-west.html">❮❮</a>
               <a class="button gallery next" href="sahalie-falls-oregon.html">❯❯</a>
             </p>
  
