--- a/public/about/index.html
+++ b/public/about/index.html
@@ -204,7 +204,7 @@
           <li>About</li>
           <li><a href="#top" class="scrollToTop"><span class="icon up"></span></a></li>
           
-          <li><span class="next"><a href="/my-story.html">My Story</a></span></li>
+          <li><span class="next"><a href="//about/my-story.html">My Story</a></span></li>
         </ul>
       </div>
 
