--- a/public/about/my-story.html
+++ b/public/about/my-story.html
@@ -341,8 +341,8 @@
         <ul class="piped">
           <li>About</li>
           <li><a href="#top" class="scrollToTop"><span class="icon up"></span></a></li>
-          <li><a class="prev" href="//about/">My Story</a></li>
-          <li><span class="next"><a href="//about/inspiration.html">Inspiration</a></span></li>
+          <li><a class="prev" href="/about/">My Story</a></li>
+          <li><span class="next"><a href="/about/inspiration.html">Inspiration</a></span></li>
         </ul>
       </div>
 
